------------------------------------------------------------------------
r1272 | gaser | 2018-02-09 13:21:27

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_stat_check_cov.m
M       cat_stat_check_cov_SPM.m
M       html/cat.html

Changed: Added slider for transparent overlay of differences to sample 
mean to cat_stat_check_vol.m.

------------------------------------------------------------------------
r1271 | gaser | 2018-02-08 15:28:51 +0100 (Do, 08 Feb 2018) | 18 lines

Changed paths:
M       CHANGES.txt
M       cat12.m
M       cat_conf_stools.m
M       cat_stat_check_cov.m
A       cat_stat_check_cov_SPM.m
M       cat_surf_display.m
M       cat_surf_render.m
M       cat_surf_results.m

(1) Fixed: Selected filename was not used for suggesting name for saving
    image file in cat_surf_results.
(2) Fixed: Colorrange couldn't be defined if NaN#s were found in the 
    colordata in cat_surf_render.m.
(3) Changed: Added function to check sample homogeneity defined in an
    existing SPM.mat design.
    

------------------------------------------------------------------------
r1270 | gaser | 2018-02-07 14:32:14 +0100 (Mi, 07 Feb 2018) | 25 lines

Changed paths:
M       CHANGES.txt
M       cat_batch_cat.m
M       cat_batch_cat.sh
M       cat_batch_long.m
M       cat_batch_long.sh
M       cat_batch_spm.sh
M       cat_conf_tools.m
M       cat_main.m
M       cat_run_newcatch.m
M       cat_run_oldcatch.m
M       cat_surf_info.m
D       cat_tst_qa.m
        > moved to cat_vol_qa.m
A  +    cat_vol_qa.m
        > moved from cat_tst_qa.m

(1) Fixed: cat_surf_info now also gives correct Pmesh if data are called
    on a different computer and SPM12 folder changed.
(2) Changed: TIV is now estimated straightforward using sum of (native) 
    tissue class.
(3) Changed: Renamed cat_tst_qa.m to cat_vol_qa.m
(4) Changed: Updated batch functions to be more consistent and added many 
    new flags.
