@@ -1,5 +1,15 @@
 ------------------------------------------------------------------------
-r1272 | gaser | 2018-02-09 13:21:27
+r1273 | gaser | 2018-02-09 14:41:08
+
+Changed paths:
+M       CHANGES.txt
+MM      cat_stat_check_cov_SPM.m
+M       cat_surf_vol2surf.m
+
+Fixed: Mapping for native volumes to surface crashed because of typo.
+
+------------------------------------------------------------------------
+r1272 | gaser | 2018-02-09 13:21:57 +0100 (Fr, 09 Feb 2018) | 11 lines
 
 Changed paths:
 M       CHANGES.txt
@@ -10,6 +20,7 @@ M       html/cat.html
 
 Changed: Added slider for transparent overlay of differences to sample 
 mean to cat_stat_check_vol.m.
+
 
 ------------------------------------------------------------------------
 r1271 | gaser | 2018-02-08 15:28:51 +0100 (Do, 08 Feb 2018) | 18 lines
